# pyfilemeta

./: README.md  setup.cfg
.github/workflows/: publish.yml
