[metadata]
name = PyMetaFile
version = 0.1.0
author = Dario Alves Junior
author_email = darioajr@gmail.com
description = A library for extracting metadata from files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darioajr/pyfilemeta
license = Apache 2.0 License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.1
install_requires =

[options.extras_require]
dev =
    pytest
    build
    twine
